# group9-utilco

./: .env.example  CLAUDE.md  README.md  pyproject.toml  test_flow.py  test_mongo.py
req/: utilico_north_star.md  utilico_requirements.md  utilico_target_architecture.html  utilico_ticket_journey_accenture_v6.html
utilico-agent/: .env.example  .gitignore  README.md  config.py  demo.py  main.py  requirements.txt
utilico-agent/agent/: __init__.py  analyst.py
utilico-agent/api/: __init__.py  schemas.py
utilico-agent/api/routes/: analyst_manager.py  csr.py  dri.py
utilico-agent/database/: __init__.py  connection.py  mock_data.json  seed.py
utilico-agent/models/: __init__.py  account.py  audit.py  escalation.py  execution.py  stubs.py  user.py
utilico-agent/pipeline/: __init__.py  orchestrator.py  step1_trigger.py  step2_ingestion.py  step3_reconciliation.py  step4_conflicts.py  step5_brief.py  step6_dri.py  step7_outputs.py
utilico-agent/static/: index.html
utilico-agent/tests/: conftest.py  test_pipeline.py  test_ui_playwright.py
